# datatui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  keybinding_implementation_prompt.md  test_param_binding.rs
.config/: config.json5
.github/workflows/: azure-static-web-apps-blue-stone-00ea39a10.yml  publish.yml  release.yml
.old.src/: action.rs  config.rs  data_import_types.rs  excel_operations.rs  lib.rs.old  logging.rs  style.rs  tabview.rs
.old.src/components/: datatable.rs  datatable_container.rs
.old.src/dataframe/: mod.rs
.old.src/dialog/: column_width_dialog.rs  command_bar.rs  csv_options_dialog.rs  data_export_dialog.rs  data_tab_manager_dialog.rs  filter_dialog.rs  find_dialog.rs  keybinding_capture_dialog.rs  keybindings_dialog.rs  llm_client_dialog.rs  message_dialog.rs  mod.rs  project_settings_dialog.rs  sort_dialog.rs  sql_dialog.rs
.old.src/jmes/: functions.rs  runtime.rs
.old.src/sql/: mod.rs
docs/: CNAME  index.html  styles.css
docs/rules/: cursor-style.md
examples/: keybindings.json
sample-data/: rule-set-example.rs.yml  rule-set-example.yml  style-set-schema.json
src/: action.rs  app.rs  config.rs  data_import_types.rs  excel_operations.rs  lib.rs  logging.rs  style.rs  update_check.rs  workspace.rs
src/components/: datatable.rs  datatable_container.rs  dialog_layout.rs  mod.rs
src/core/: managed_dataset.rs  mod.rs  models.rs  schema.rs  types.rs
src/dataframe/: manager.rs  meta.rs
src/dialog/: alias_edit_dialog.rs  column_operation_options_dialog.rs  column_operations_dialog.rs  column_width_dialog.rs  csv_options_dialog.rs  data_export_dialog.rs  data_import_dialog.rs  data_management_dialog.rs  data_tab_manager_dialog.rs  dataframe_details_dialog.rs  embeddings_prompt_dialog.rs  error_dialog.rs  file_browser_dialog.rs  filter_dialog.rs  find_all_results_dialog.rs  find_dialog.rs  jmes_dialog.rs  json_options_dialog.rs  keybindings_dialog.rs  llm_client_create_dialog.rs  llm_client_dialog.rs  message_dialog.rs  mod.rs  parquet_options_dialog.rs  project_settings_dialog.rs  sort_dialog.rs  sql_dialog.rs  sqlite_options_dialog.rs  style_rule_editor_dialog.rs  style_set.rs  style_set_browser_dialog.rs  style_set_manager.rs  style_set_manager_dialog.rs  table_export_dialog.rs  xlsx_options_dialog.rs
src/jmes/: mod.rs
src/providers/: mod.rs  openai.rs
src/services/: data_service.rs  mod.rs  search_service.rs
src/sql/: mod.rs
tests/: search_service_integration.rs  style_set_roundtrip.rs
(+30 files in other folders)
