[package]
name = "datatui"
version = "0.5.0-alpha"
edition = "2021"
description = "DataTUI: A fast, keyboard-first terminal data viewer."
authors = ["Matthew Seyer <matthew.seyer@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[features]
default = []

[dependencies]
chrono = {version = "0.4.42", features = ["serde"]}
color-eyre = "0.6.5"
crossterm = "0.28"
directories = "6.0"
duckdb = {version = "1.4.3", features = ["bundled"]}
ratatui = "0.29"
regex = "1.12.2"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0"
uuid = {version = "1.19.0", features = ["v4", "serde"]}

[dev-dependencies]
tempfile = "3.0"

[build-dependencies]
anyhow = "1.0.90"
vergen-gix = { version = "1.0.2", features = ["build", "cargo"] }
